{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 511,
  "lineage": "45a090d9-ce06-19f9-ae61-bcc202143668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:internet-gateway/igw-0fb6a37b73195af90",
            "id": "igw-0fb6a37b73195af90",
            "owner_id": "897915227767",
            "vpc_id": "vpc-03ab7cae44b4e3485"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:route-table/rtb-0baf95c2a1a0c47f6",
            "id": "rtb-0baf95c2a1a0c47f6",
            "owner_id": "897915227767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab7cae44b4e3485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:route-table/rtb-019c701590faab0b5",
            "id": "rtb-019c701590faab0b5",
            "owner_id": "897915227767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb6a37b73195af90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab7cae44b4e3485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec23b46759e74a1",
            "route_table_id": "rtb-0baf95c2a1a0c47f6",
            "subnet_id": "subnet-01cc4489228679bd1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083fdc52eb098cad0",
            "route_table_id": "rtb-019c701590faab0b5",
            "subnet_id": "subnet-0c94547f69bb9bfbd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:subnet/subnet-01cc4489228679bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cc4489228679bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897915227767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-private"
            },
            "tags_all": {
              "Name": "udacity-private"
            },
            "vpc_id": "vpc-03ab7cae44b4e3485"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:subnet/subnet-0c94547f69bb9bfbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94547f69bb9bfbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897915227767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-public"
            },
            "tags_all": {
              "Name": "udacity-public"
            },
            "vpc_id": "vpc-03ab7cae44b4e3485"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897915227767:vpc/vpc-03ab7cae44b4e3485",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bef62e171143be80",
            "default_route_table_id": "rtb-0129b82917c6179d4",
            "default_security_group_id": "sg-0e4bc4413f0583101",
            "dhcp_options_id": "dopt-04be58eb3a32ecaef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ab7cae44b4e3485",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0129b82917c6179d4",
            "owner_id": "897915227767",
            "tags": {
              "Name": "udacity"
            },
            "tags_all": {
              "Name": "udacity"
            }
          }
        }
      ]
    }
  ]
}